--- a/src/componentes/estaticos/footer/Footer.css
+++ b/src/componentes/estaticos/footer/Footer.css
@@ -42,5 +42,35 @@
      transform: translateY(-0.1em);
     }
    }
+
+   #linha-horizontal {
+    
+    width: 150px;
+    border: 1px solid rgb(237, 237, 237);
+}
+
+   .div{
+    
+    width: 100%;
+    height: 50px;
+    background-color: rgb(52, 50, 50);
+    text-align: center;
    
+   }
+   .institucional{
+    text-align: end;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+   }
+   .img{ 
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;  
+    align-items: center;
+    flex-direction: row;
+    padding: 30px;
+
+   }
+  
    
