--- a/src/componentes/estaticos/navbar/Menu.css
+++ b/src/componentes/estaticos/navbar/Menu.css
@@ -1,26 +1,12 @@
-
-.link{
-    text-decoration: none;
+.dropdownmenu{
+    margin-top: 10px;
 }
-.nav-main {
-    width: 100% !important;
-    background-color: var(--cor-de-fundo) !important;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    min-height: 60px !important;
-    padding-bottom: 15px ; 
-    
-    
-    
-}
-
 .dropdownmenu ul, .dropdownmenu li {
 	margin: 0;
 	padding: 0;
 }
 .dropdownmenu ul {
-	background: rgb(0, 0, 0) !important;
+	background: gray;
 	list-style: none;
 	width: 100%;
 }
@@ -30,7 +16,7 @@
 	width:auto;
 }
 .dropdownmenu a {
-	background: #30A6E6;
+	background: #000000;
 	color: #FFFFFF;
 	display: block;
 	font: bold 12px/20px sans-serif;
@@ -46,31 +32,35 @@
 .dropdownmenu li:hover a {
 	background: #000000;
 }
-#submenu {
-	left: 0;
+#submenu-xbox {
+	left: -77px;
 	opacity: 0;
 	position: absolute;
+    width: 200px !important;
 	top: 35px;
 	visibility: hidden;
 	z-index: 1;
 }
-li:hover ul#submenu {
+li:hover ul#submenu-xbox {
 	opacity: 1;
 	top: 40px;	/* adjust this as per top nav padding top & bottom comes */
 	visibility: visible;
 }
-#submenu li {
+#submenu-xbox li {
 	float: none;
 	width: 100%;
 }
-#submenu a:hover {
-	background: #DF4B05;
+#submenu-xbox a:hover {
+	background: #235f07 !important;
 }
-#submenu a {
+#submenu-xbox a {
 	background-color:#000000;
 }
 
-.MuiToolbar-gutters {
-    padding-left: 0px !important; 
-     padding-right: 0px !important; 
+.nav-play{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 15px;
 }
