--- a/src/componentes/estaticos/navbar/navbarAdmin/NavbarAdmin.css
+++ b/src/componentes/estaticos/navbar/navbarAdmin/NavbarAdmin.css
@@ -74,3 +74,45 @@ li:hover ul#submenu {
     padding-left: 0px !important; 
      padding-right: 0px !important; 
 }
+.menu-admin{
+	display: flex;
+	justify-content: center;
+	background-color: #FFFFFF;
+	color: #000000;
+	width: 100% !important;
+	max-height: 200px;
+}
+.box-item{
+	border-color: #000000;
+}
+.button {
+	
+	
+	
+	
+	background: #e8e8e8;
+	border: 1px solid #e8e8e8;
+	transition: all .3s;
+	box-shadow: 6px 6px 12px #c5c5c5;
+				
+   }
+   
+   .button:hover {
+	border: 1px solid white;
+   }
+   
+   .button:active {
+	box-shadow: 4px 4px 12px #c5c5c5,
+				-4px -4px 12px #ffffff;
+   }
+
+   .button-admin{
+	width: 100%;
+	height: 100px;
+	
+	-webkit-box-shadow: 8px 1px 0 -7px #b3b2b2 !important;
+    -moz-box-shadow: 8px 1px 0 -7px #b3b2b2 !important;
+    box-shadow: 8px 1px 0 -7px #b3b2b2 !important;
+	
+	
+   }
