--- a/src/componentes/estaticos/navbar/navbarAdmin/NavbarAdmin.css
+++ b/src/componentes/estaticos/navbar/navbarAdmin/NavbarAdmin.css
@@ -81,23 +81,22 @@ li:hover ul#submenu {
 	color: #000000;
 	width: 100% !important;
 	max-height: 200px;
+	
 }
 .box-item{
 	border-color: #000000;
 }
-.button {
-	
-	
-	
-	
+.button-navbar-admin {
+		
 	background: #e8e8e8;
 	border: 1px solid #e8e8e8;
 	transition: all .3s;
 	box-shadow: 6px 6px 12px #c5c5c5;
+	
 				
    }
    
-   .button:hover {
+   .button-navbar-admin :hover {
 	border: 1px solid white;
    }
    
@@ -110,9 +109,10 @@ li:hover ul#submenu {
 	width: 100%;
 	height: 100px;
 	
-	-webkit-box-shadow: 8px 1px 0 -7px #b3b2b2 !important;
-    -moz-box-shadow: 8px 1px 0 -7px #b3b2b2 !important;
-    box-shadow: 8px 1px 0 -7px #b3b2b2 !important;
+	padding: 10px !important;
+	border-right: 1px solid !important;
+	border-right-color: rgba(106, 106, 106, 0.549) !important;
+	border-right-style: inset !important;
 	
 	
    }
